logs/django-plus.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_plus-1.2.21.egg-info'...
Listing './lib/python3.5/site-packages/djangoplus'...
Compiling './lib/python3.5/site-packages/djangoplus/admin_utils.py'...
***   File "./lib/python3.5/site-packages/djangoplus/admin_utils.py", line 43
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangoplus/fieldtypes'...
Listing './lib/python3.5/site-packages/djangoplus/forms'...
Listing './lib/python3.5/site-packages/djangoplus/management'...
Listing './lib/python3.5/site-packages/djangoplus/management/commands'...
Compiling './lib/python3.5/site-packages/djangoplus/management/commands/reset_pg_sequences.py'...
***   File "./lib/python3.5/site-packages/djangoplus/management/commands/reset_pg_sequences.py", line 23
    print 'Checking...'
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/djangoplus/management/commands/update_permissions.py'...
***   File "./lib/python3.5/site-packages/djangoplus/management/commands/update_permissions.py", line 7
    print 'Updating permissions...'
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/djangoplus/middleware'...
Compiling './lib/python3.5/site-packages/djangoplus/model_info.py'...
***   File "./lib/python3.5/site-packages/djangoplus/model_info.py", line 68
    except IndexError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/djangoplus/models.py'...
***   File "./lib/python3.5/site-packages/djangoplus/models.py", line 78
    print "Adding permission '%s'" % p
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/djangoplus/shortcuts'...
Listing './lib/python3.5/site-packages/djangoplus/templates'...
Listing './lib/python3.5/site-packages/djangoplus/templates/admin'...
Listing './lib/python3.5/site-packages/djangoplus/templates/admin/djangoplus'...
Listing './lib/python3.5/site-packages/djangoplus/templates/admin/djangoplus/dynamictemplate'...
Listing './lib/python3.5/site-packages/djangoplus/templates/djangoplus'...
Listing './lib/python3.5/site-packages/djangoplus/templates/i18n_functions'...
Listing './lib/python3.5/site-packages/djangoplus/templatetags'...
Compiling './lib/python3.5/site-packages/djangoplus/templatetags/djangoplus_tags.py'...
***   File "./lib/python3.5/site-packages/djangoplus/templatetags/djangoplus_tags.py", line 398
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/djangoplus/test_utils.py'...
***   File "./lib/python3.5/site-packages/djangoplus/test_utils.py", line 95
    print arg1
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/djangoplus/tests'...
Listing './lib/python3.5/site-packages/djangoplus/urls'...
Listing './lib/python3.5/site-packages/djangoplus/utils'...
Compiling './lib/python3.5/site-packages/djangoplus/utils/gmap_utils.py'...
***   File "./lib/python3.5/site-packages/djangoplus/utils/gmap_utils.py", line 48
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangoplus/views'...
Listing './lib/python3.5/site-packages/djangoplus/widgets'...
Compiling './lib/python3.5/site-packages/djangoplus/widgets/ajax_m2m_widget.py'...
***   File "./lib/python3.5/site-packages/djangoplus/widgets/ajax_m2m_widget.py", line 134
    except self.model.DoesNotExist, e:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
